migrate to ROS2 implement ros2 rgbd

--- a/Examples/ROS/Edge_SLAM/CMakeLists.txt
+++ b/Examples/ROS/Edge_SLAM/CMakeLists.txt
@@ -1,22 +1,11 @@
-cmake_minimum_required(VERSION 2.8.3)
-
+cmake_minimum_required(VERSION 3.5)
+project(edge_slam_ros2)
 
 # Edge-SLAM: replaced next include statement with the content of rosbuild.cmake
 # and made edits as indicated below to prevent cmake deprecated policy warnings
 #include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
 ########## Start of rosbuild.cmake ##########
 #cmake_minimum_required(VERSION 2.4.6)
-
-#
-#  Catkin-compat thunks
-#
-# Edge-SLAM: added cmake version check if statement
-if(${CMAKE_VERSION} VERSION_LESS "3.0")
-  cmake_policy(SET CMP0011 OLD)
-endif()
-
-macro(rosbuild_catkinize)
-endmacro()
 
 # Edge-SLAM: added cmake version check if statement
 # Policy settings to prevent warnings on 2.6 but ensure proper operation on
@@ -45,22 +34,7 @@ endif(COMMAND cmake_policy)
 
 set(CMAKE_OSX_ARCHITECTURES "x86_64")
 
-##############################################################################
-# First things first: we must have rospack.  But only look at PATH, #3831
-find_program(ROSPACK_EXE NAMES rospack DOC "rospack executable" NO_CMAKE_PATH NO_CMAKE_ENVIRONMENT_PATH NO_CMAKE_SYSTEM_PATH)
-if (NOT ROSPACK_EXE)
-  message(FATAL_ERROR "Couldn't find rospack. Please run 'make' in $ROS_ROOT")
-endif(NOT ROSPACK_EXE)
-##############################################################################
-
-# Load private macros (not to be used externally)
-include($ENV{ROS_ROOT}/core/rosbuild/private.cmake)
-# Load public macros (developer's API)
-include($ENV{ROS_ROOT}/core/rosbuild/public.cmake)
-########## End of rosbuild.cmake ##########
-
-
-rosbuild_init()
+find_package(ament_cmake REQUIRED)
 
 IF(NOT ROS_BUILD_TYPE)
   SET(ROS_BUILD_TYPE Release)
@@ -82,6 +56,10 @@ find_package(OpenCV 4 REQUIRED)
 find_package(Eigen3 3.1.0 REQUIRED)
 find_package(Pangolin REQUIRED)
 find_package(Boost COMPONENTS system serialization filesystem REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(sensor_msgs REQUIRED)
+find_package(message_filters REQUIRED)
+find_package(cv_bridge REQUIRED)
 
 include_directories(
 ${PROJECT_SOURCE_DIR}
@@ -102,29 +80,42 @@ ${PROJECT_SOURCE_DIR}/../../../lib/libEdge_SLAM.so
 )
 
 # Node for monocular camera
-rosbuild_add_executable(Mono
-src/ros_mono.cc
-)
+#rosbuild_add_executable(Mono
+#src/ros_mono.cc
+#)
 
-target_link_libraries(Mono
-${LIBS}
-)
+#target_link_libraries(Mono
+#${LIBS}
+#)
 
 # Node for stereo camera
-rosbuild_add_executable(Stereo
-src/ros_stereo.cc
-)
+#rosbuild_add_executable(Stereo
+#src/ros_stereo.cc
+#)
 
-target_link_libraries(Stereo
-${LIBS}
-)
+#target_link_libraries(Stereo
+#${LIBS}
+#)
 
 # Node for RGB-D camera
-rosbuild_add_executable(RGBD
-src/ros_rgbd.cc
+add_executable(RGBD src/ros_rgbd.cc)
+ament_target_dependencies(RGBD
+  rclcpp
+  sensor_msgs
+  message_filters
+  cv_bridge
+  OpenCV
+  Eigen3
+  Pangolin
+  Boost
 )
 
 target_link_libraries(RGBD
 ${LIBS}
 )
 
+install(TARGETS RGBD
+  DESTINATION lib/${PROJECT_NAME}
+)
+
+ament_package()
